test/files/neg/orphans_2.check
orphans_2.scala:12: error: Orphan instance.
  foo(new Monoid[Int] {}) // Bad, an orphan.
          ^
one error found
